@@ -1,13 +1,14 @@
-PlexAPI==4.13.4
-tmdbapis==1.1.0
 arrapi==1.4.2
+GitPython==3.1.31
 lxml==4.9.2
-requests==2.28.2
-ruamel.yaml==0.17.21
-schedule==1.1.0
-retrying==1.3.4
+num2words==0.5.12
 pathvalidate==2.5.2
 pillow==9.5.0
-num2words==0.5.12
+PlexAPI==4.13.4
 psutil==5.9.4
-GitPython==3.1.31
+python-dotenv==1.0.0
+requests==2.28.2
+retrying==1.3.4
+ruamel.yaml==0.17.21
+schedule==1.1.0
+tmdbapis==1.1.0
